// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Breadcrumbs /> > Default story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          aria-label="Child"
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Child
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Grandchild
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > LongList story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          aria-label="Breadcrumb 9"
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Parent
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 2
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 3
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 4
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 5
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 6
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 7
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 8
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 9
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 10
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > LongText story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          aria-label="Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px"
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, no overflow is 3 lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > LongTextCustomSeparator story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          aria-label="Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px"
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, no overflow is 3 lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          &gt;
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > OneCrumb story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > TwoCrumbs story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          aria-label="Breadcrumb 1"
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.9999 17.6542L8.34619 12.0004L13.9999 6.34668L15.0537 7.40043L10.4537 12.0004L15.0537 16.6004L13.9999 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Breadcrumb 2
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> > WithProvidedIcons story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="_breadcrumbs_325516"
  >
    <ul
      class="_breadcrumbs__list_325516"
    >
      <li
        class="_breadcrumbs__item_325516 _breadcrumbs__item-back_325516"
      >
        <a
          aria-label="Child"
          class="_breadcrumbs__link_325516"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _breadcrumbs__back-icon_325516"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.95197 17.6542L4.29797 12.0004L9.95197 6.34668L11.0057 7.43118L7.18647 11.2504H19.702V12.7504H7.18647L11.0057 16.5697L9.95197 17.6542Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Child
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
      <li
        class="_breadcrumbs__item_325516"
      >
        <a
          class="_breadcrumbs__link_325516"
          href="#"
        >
          Grandchild
        </a>
        <span
          aria-hidden="true"
          class="_text_b3eba3 _text--body-md_b3eba3 _breadcrumbs__separator_325516"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;
